# lyric

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-related.yml  feature-request.yml
.github/workflows/: release-python-task.yml  release-python.yml
bindings/javascript/lyric-js-worker/: .gitignore  README.md  componentize.js  package-lock.json  package.json  rollup.config.js  worker.js
bindings/javascript/lyric-js-worker/wit/: deps.toml  normal-task.wit
bindings/lyric-py/: Cargo.toml  pyproject.toml
bindings/lyric-py/examples/: code_to_run.py  python_driver.py  python_worker.py  python_worker_dev.py
bindings/lyric-py/src/: lyric.rs
bindings/python/: .gitignore  Makefile  README.md  pyproject.toml
bindings/python/lyric-component-ts-transpiling/: pyproject.toml
bindings/python/lyric-js-worker/: pyproject.toml
bindings/python/lyric-py/: Cargo.toml  pyproject.toml
bindings/python/lyric-py-worker/: pyproject.toml
bindings/python/lyric-py-worker/src/: worker.py
bindings/python/lyric-py/python/lyric/: __init__.py  _py_lyric.pyi  py_lyric.py
bindings/python/lyric-py/src/: env.rs  handle.rs  lyric.rs
bindings/python/lyric-task/: pyproject.toml
bindings/python/lyric-task/src/lyric_task/: __init__.py
bindings/python/scripts/: sync_version.py
components/rust/component-ts-transpiling/: Cargo.toml  README.md
components/rust/component-ts-transpiling/src/: lib.rs
components/rust/component-ts-transpiling/wit/: world.wit
container/python/: Dockerfile  Dockerfile-base
container/python/alpine/: Dockerfile  Dockerfile-base
crates/: Makefile
crates/lyric/: Cargo.toml
crates/lyric-rpc/: Cargo.toml
crates/lyric-rpc/proto/: task.proto
crates/lyric-utils/: Cargo.toml
crates/lyric-wasm-runtime/: Cargo.toml
crates/lyric-wasm-runtime/src/: quic.rs  tcp.rs
crates/lyric-wasm-runtime/src/component/: mod.rs
crates/lyric-wasm-runtime/src/host/: handler.rs
crates/lyric/src/: lyric.rs
examples/notebook/: lyric_quick_start.ipynb  lyric_sandbox_verification.ipynb  lyric_ts_component.ipynb
