[package]
name = "lyric-wasm-runtime"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lyric-utils = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tokio = { version="1", features = ["macros", "fs"], default-features = false}
async-trait = { workspace = true }
wasmtime = "26"
wasmtime-wasi = "26"
wasi-common = "26"
wasmtime-wasi-http =  "26"

wit-bindgen-wrpc = { version = "0.9", default-features = false }
wrpc-runtime-wasmtime = { version = "0.25", default-features = false }
wrpc-transport = { version = "0.28", default-features = false, features = ["net"]}
quinn = { version = "=0.11", features = ["runtime-tokio"], optional = true}
rustls = { version = "0.23", features = ["logging", "ring"], optional = true}
rcgen = { version = "0.13", features = ["crypto", "ring", "zeroize"], optional = true}
wrpc-transport-quic = { version = "0.4", default-features = false, optional = true}
wrpc-interface-http = { version = "0.30", default-features = false, features = ["wasmtime-wasi-http"]}
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }

wit-bindgen = { version = "0.34"}
wasmparser = { version = "0.219", default-features = false }
wit-component = { version = "0.219", default-features = false }
wasi-preview1-component-adapter-provider = { version = "25", default-features = false }
async-stream = "0.3.6"
serde_json =  { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }

chrono.workspace = true
deadpool = "=0.12.1"
hyper = "1.4"
once_cell = "1.19.0"

directories-next = { version = "2", optional = true}


[features]
default = ["tcp"]
tcp = []
quic = [
    "dep:quinn",
    "quinn/log",
    "quinn/platform-verifier",
    "quinn/ring",
    "quinn/runtime-tokio",
    "quinn/rustls",
    "rustls",
    "rcgen",
    "wrpc-transport-quic",
    "directories-next",
]